refactor: FV-104 - use a more adequate method for empty list definition